# automaton

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
godot/modules/automaton/: SCsub  agent.cpp  agent.h  monitor.cpp  monitor.h  register_types.cpp  register_types.h
godot/modules/automaton/include/: Port.h
include/: EventDispatcher.h  EventQueue.h  Events.h  actor.hpp  agent.h  api.h  collection.hpp  command.h  component.h  component.hpp  composition.hpp  computer.h  controller.h  data.h  data.hpp  game.h  game.hpp  kernel.h  model.h  model.hpp  network.h  network.hpp  node.h  port.h  program.h  program.hpp  render.hpp  slot.hpp  table.hpp  tree.h  tree.hpp
project/xcode/automaton.xcodeproj/: project.pbxproj
project/xcode/automaton.xcodeproj/project.xcworkspace/xcuserdata/Caleb.xcuserdatad/: UserInterfaceState.xcuserstate
project/xcode/automaton.xcodeproj/xcshareddata/xcschemes/: automaton.xcscheme  automaton_tests.xcscheme
project/xcode/automaton.xcodeproj/xcuserdata/Caleb.xcuserdatad/xcschemes/: xcschememanagement.plist
project/xcode/automaton_tests/: main.cpp
src/: AnimatedBackground.cpp  AnimatedText.cpp  CMakeLists.txt  CommandPalette.cpp  CompoundButton.cpp  EventDispatcher.cpp  EventQueue.cpp  Events.cpp  Layer.cpp  Port.cpp  agent.cpp  api.cpp  component.cpp  computer.cpp  controller.cpp  data.cpp  game.cpp  kernel.cpp  main.cpp  model.cpp  network.cpp  node.cpp  port.cpp  program.cpp  tree.cpp
test/: CMakeLists.txt  EventTestHelpers.hpp  test_EventDispatcher.cpp  test_EventQueue.cpp  test_collection.cpp  test_placeholder.cpp  test_slot.cpp
xcode/Automaton/Automaton.xcodeproj/: project.pbxproj
xcode/Automaton/Automaton.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/Automaton/Automaton.xcodeproj/project.xcworkspace/xcuserdata/Caleb.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Automaton/Automaton.xcodeproj/xcuserdata/Caleb.xcuserdatad/xcschemes/: xcschememanagement.plist
